
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        
 
    android:background="#CFECEC" 
    android:layout_width="match_parent" 
    android:layout_height="match_parent" 
    android:paddingBottom="@dimen/activity_vertical_margin" 
    android:paddingLeft="@dimen/activity_horizontal_margin" 
    android:paddingRight="@dimen/activity_horizontal_margin" 
    android:paddingTop="@dimen/activity_vertical_margin" 
    android:orientation="vertical">
    

    
    <!-- Title and Subtitle row -->

<LinearLayout android:gravity="left" 
    android:layout_width="match_parent" 
    android:layout_height="wrap_content" 
    android:orientation="horizontal">

<TextView
    android:id="@+id/Address"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Address"
    android:textStyle="bold" />

<EditText
    android:id="@+id/addressedit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:ems="10"
    android:layout_gravity="top" 
    android:padding="4dp" />

</LinearLayout>
<!--  city row   -->

<LinearLayout android:gravity="left" 
    android:layout_width="match_parent" 
    android:layout_height="wrap_content" 
    android:orientation="horizontal">

<TextView
    android:id="@+id/City"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/City"
    android:textStyle="bold" />

<EditText
    android:id="@+id/cityedit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:ems="10"
    android:layout_gravity="top" 
    android:padding="4dp" />

</LinearLayout>
   <!-- State row --> 
   
   <LinearLayout android:gravity="left" 
    android:layout_width="match_parent" 
    android:layout_height="wrap_content" 
    android:orientation="horizontal">
   
   
   <Spinner
    android:id="@+id/spinner1"
    android:entries="@array/spinner_state"
     android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
   
   
   </LinearLayout>
   
   <!--  Zipcode row   -->

<LinearLayout android:gravity="left" 
    android:layout_width="match_parent" 
    android:layout_height="wrap_content" 
    android:orientation="horizontal">

<TextView
    android:id="@+id/Zipcode"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Zipcode"
    android:textStyle="bold" />

<EditText
    android:id="@+id/zipcodeedit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:ems="10"
    android:layout_gravity="top" 
    android:padding="4dp" />

</LinearLayout>

<!--  Email row   -->

<LinearLayout android:gravity="left" 
    android:layout_width="match_parent" 
    android:layout_height="wrap_content" 
    android:orientation="horizontal">

<TextView
    android:id="@+id/email"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Email"
    android:textStyle="bold" />

<EditText
    android:id="@+id/emailedit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:ems="10"
    android:layout_gravity="top" 
    android:padding="4dp" />


</LinearLayout>

<!--  Phone number row   -->

<LinearLayout android:gravity="left" 
    android:layout_width="match_parent" 
    android:layout_height="wrap_content" 
    android:orientation="horizontal">

<TextView
    android:id="@+id/phone"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Phone"
    android:textStyle="bold" />

<EditText
    android:id="@+id/phoneedit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:ems="10"
    android:layout_gravity="top"
    
    android:inputType="number"  
    
    android:padding="4dp" />
</LinearLayout>

<!--  Gender  row  -->

<LinearLayout android:gravity="left" 
    android:layout_width="match_parent" 
    android:layout_height="wrap_content" 
    android:orientation="horizontal">



     
    </LinearLayout>
    


 <!-- DOB row --> 
   
   <LinearLayout android:gravity="left" 
    android:layout_width="match_parent" 
    android:layout_height="wrap_content" 
    android:orientation="horizontal">
   
   
   <Spinner
    android:id="@+id/spinner2"
    android:entries="@array/spinner_month"
     android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
   
   <Spinner
    android:id="@+id/spinner3"
    android:entries="@array/spinner_day"
     android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
   
   <Spinner
    android:id="@+id/spinner4"
    android:entries="@array/spinner_year"
     android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />  
   </LinearLayout>
   
<LinearLayout android:gravity="left" 
    android:layout_width="match_parent" 
    android:layout_height="wrap_content" 
    android:orientation="vertical">
  

 <Button android:id="@+id/btnStudent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="Subject Page"/> 
                
 <Button android:id="@+id/Save"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="Save"/> 


</LinearLayout>
</LinearLayout>    
   